objects/APP_CONNECT_SETTING__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>App connection settings</description>
    <fields>
        <fullName>APP_ENV__c</fullName>
        <description>Environment: PROD or TEST</description>
        <label>APP ENV</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificateUniqueName__c</fullName>
        <description>Client certificate unique name in Certificates section for callout</description>
        <label>CertificateUniqueName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientID__c</fullName>
        <label>ClientID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOKEN_URL__c</fullName>
        <label>TOKEN URL</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>APP CONNECT SETTING</label>
</CustomObject>